# SpectralNet

./: .gitignore  LICENSE.md  README.md  pyproject.toml  req.txt  setup.cfg
data/Reuters/: get_reuters_data.sh  make_reuters.py
docs/: index.html
examples/: cluster_mnist.py  cluster_twomoons.py  data.py  reduce_mnist.py  reduce_twomoons.py
src/: AETrainer.py  SiameseTrainer.py  SpectralNet.py  SpectralTrainer.py  data.py  main.py  metrics.py  utils.py
src/config/: mnist.json  reuters.json  spiral_arm.json  twomoons.json
src/spectralnet/: __init__.py  _cluster.py  _metrics.py  _reduction.py  _spectral.py  _utils.py
src/spectralnet/_losses/: __init__.py  _siamese_loss.py  _spectralnet_loss.py
src/spectralnet/_models/: __init__.py  _ae_model.py  _siamesenet_model.py  _spectralnet_model.py
src/spectralnet/_trainers/: __init__.py  _ae_trainer.py  _siamesenet_trainer.py  _spectralnet_trainer.py  _trainer.py
