[metadata]
name = spectralnet
version = 0.1.1
author = Amitai
description = Spectral Clustering Using Deep Neural Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaham-lab/SpectralNet.git
project_urls =
    Bug Tracker = https://github.com/shaham-lab/SpectralNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src