[metadata]
name = spectralnet
version = 0.1.2
author = Amitai
description = Spectral Clustering Using Deep Neural Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaham-lab/SpectralNet.git
project_urls =
    Bug Tracker = https://github.com/shaham-lab/SpectralNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    setuptools
    wheel
    torch>=2.0.0
    torchvision>=0.15.1
    h5py>=3.8.0
    numpy>=1.24
    annoy>=1.17.1
    scipy>=1.10.1
    munkres
    matplotlib
    scikit-learn>=1.2.2

[options.packages.find]
where = src